--- a/templatemo_420_ocean/index.html
+++ b/templatemo_420_ocean/index.html
@@ -43,7 +43,7 @@
 
     <div id="responsive-menu">
         <ul class="menu-holder">
-            <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
+            <li><a href="https://google.com"><i class="fa fa-home"></i>Главная</a></li>
             <li><a href="#services"><i class="fa fa-cogs"></i>Services</a></li>
             <li><a href="#products"><i class="fa fa-list"></i>Products</a></li>
             <li><a href="#video"><i class="fa fa-list"></i>Video</a></li>
@@ -64,7 +64,7 @@
                     <div class="col-md-7 col-sm-8">
                         <nav class="main-menu hidden-xs">
                             <ul>
-                                <li><a href="#">Home</a></li>
+                                <li><a href="https://google.com" target="_blank">Главная</a></li>
                                 <li><a href="#services">Services</a></li>
                                 <li><a href="#products">Products</a></li>
                                 <li><a href="#video">Video</a></li>
@@ -74,7 +74,7 @@
                     </div>
                     <div class="col-md-2 col-sm-2 col-xs-12">
                         <ul class="social-top">
-                            <li><a href="#"><i class="fa fa-facebook"></i><span class="hidden-xs">Facebook</span></a></li>
+                            <li><a href="#"><i class="fa fa-vk"></i><span class="hidden-xs">Facebook</span></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i><span class="hidden-xs">Twitter</span></a></li>
                             <li><a href="#"><i class="fa fa-instagram"></i><span class="hidden-xs">Instagram</span></a></li>
                         </ul>
